--- a/bonnie-style.css
+++ b/bonnie-style.css
@@ -1,8 +1,12 @@
 body {
   background-color: black;
-  color: rgb(220, 220, 220);
+  color: rgb(240, 240, 240);
   font-size: 20px;
   font-weight: 300;
+}
+
+.row {
+  margin-right: 0px;
 }
 
 .header {
@@ -14,14 +18,23 @@ body {
   color: white;
 }
 
-.title {
+.title h1 {
   color: rgb(227, 134, 25);
   font-family: 'Codystar', sans-serif;
-  font-size: 64px;
+  font-size: 45px;
 }
 
 .header h2, .header h4 {
   font-weight: 300;
+}
+
+.title h1:hover, p a:hover, h4 a:hover {
+  color: rgb(241, 230, 81);
+}
+
+a:hover {
+  text-decoration: none;
+  cursor: pointer;
 }
 
 #github-link img {
@@ -34,11 +47,11 @@ body {
 
 .title-block {
   background-color: rgba(0, 0, 0, 0.8);
+  width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+  width: -moz-max-content;    /* Firefox/Gecko */
+  width: -webkit-max-content;
+  padding: 0px 13px 0px 13px;
 }
-
-
-
-
 
 .box {
   height: 180px;
@@ -60,11 +73,6 @@ body {
   display: block;
 }
 
-.boxes a:hover {
-  text-decoration: none;
-  cursor: pointer;
-}
-
 #text-box {
   border: 1px solid rgb(227, 134, 25);
   padding: 46px 20px 36px 20px;
@@ -81,4 +89,78 @@ body {
 
 #box3 {
   background-color: rgb(245, 67, 11);
+}
+
+/* Only for CV page -------------------------------------------------------------------*/
+
+.cv-header {
+  height: 250px;
+}
+
+.cv-body {
+  max-width: 800px;
+  float: none;
+  margin: 0 auto ;
+}
+
+.cv-section {
+  margin: 0px 10px 0px 10px;
+  padding: 10px;
+}
+.cv-section h3{
+  text-transform: uppercase;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+img {
+  max-width: 100%;
+}
+
+hr {
+  color: white;
+}
+
+ul {
+    list-style-type: disc;
+    list-style-position: inside;
+    text-indent: -1em;
+    padding-left: 0;
+    margin-left: 0;
+}
+
+li {
+  padding-left: 1em;
+}
+
+#skills ul {
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+}
+
+#skills h3, #interests h3 {
+  color: rgb(241, 230, 81);
+}
+
+#work-experience h3, p a, h4 a {
+  color: rgb(227, 134, 25);
+}
+
+#education h3 {
+  color: rgb(245, 67, 11);
+}
+
+h4 {
+  font-weight: normal;
+}
+
+p, li {
+  font-size: 16px;
+}
+
+/*-----About Page-----*/
+
+#welcome h3{
+  text-align: center;
+  font-size: 20px;
 }
